# ai-agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Caddyfile  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  dev.sh  docker-compose.yml  go.work  install.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.sh
.claude/: settings.local.json
.github/: pull_request_template.md
.github/workflows/: ci.yml  deploy.yml  pr-check.yml  release.yml
.venv-test/: pyvenv.cfg
alembic/: env.py
alembic/versions/: 20260503_0001_control_plane_foundation.py  20260503_0002_chat_messages.py  20260503_0003_user_sessions.py  20260506_0004_user_agent_configs.py  20260506_0005_user_agent_concurrency.py  20260517_0006_device_active_project.py
app/: bot.py  composition.py  config.py  main.py
app/actions/: deploy.py  docker_ops.py  file_ops.py  git_ops.py  github_ops.py
app/adapters/: agent_configs.py  agent_context.py  agent_discovery.py  audit.py  chat_history.py  github.py  job_store.py  ollama.py  redis_client.py  sessions.py  telegram_info.py  worker_registry.py
app/adapters/database/: models.py  repositories.py  session.py
app/agents/: pm.py
app/domain/: accounts.py  agents.py  capabilities.py  exceptions.py  messaging.py  tokens.py  use_cases.py
app/executor/: actions.py  context.py  loop.py  runner.py
app/handlers/: actions.py  agents.py  agents_discovery.py  approval.py  auth.py  chat.py  commands.py  delegation.py  formatting.py  process_runners.py  project.py  registry.py  terminal.py
app/intents/: parser.py  schemas.py
app/interfaces/: admin.py  auth.py  chat.py  gateway.py  worker_ws.py
app/memory/: models.py  store.py
app/orchestrator/: approval.py  plans.py
app/ports/: agents.py  ai_provider.py  chat_history.py  execution_loop.py  identity.py  pm_agent.py
app/safety/: policy.py
app/setup/: wizard.py
app/tui/: __init__.py  __main__.py  _chat.py  _commands.py  _completer.py  _http.py  _output.py  _runner.py  _session.py  _state.py  _statusbar.py  _worker.py
data/: .tui_history  projects.json
docs/plan/: base-features.md
octopus-cli/: Makefile  go.mod  go.sum  install.sh  main.go
octopus-cli/internal/api/: client.go
octopus-cli/internal/config/: config.go
octopus-cli/internal/qr/: qr.go
octopus-cli/internal/session/: session.go
octopus-cli/internal/tui/: chat.go  commands.go  model.go  styles.go  update.go  view.go  worker.go
telegram-adapter/: Dockerfile  main.py  requirements.txt
tests/: test_capabilities.py  test_domain.py
tests/actions/: test_deploy.py  test_docker_compose.py  test_file_ops.py  test_git_ops.py
tests/adapters/: test_agent_context.py  test_agent_discovery.py  test_control_plane_repository.py  test_github.py  test_ollama.py  test_repositories.py  test_sessions.py
tests/agents/: test_domain_agents.py  test_pm_agent.py
tests/domain/: test_agents.py  test_tokens.py
tests/executor/: test_complexity_heuristic.py  test_context.py  test_loop.py
tests/intents/: test_parser.py
